--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jagnyadatta Dalai</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Chandra Shekhara Prasad</title>
+    <link rel="icon" type="image/svg+xml" href="/c_1.png" />
     <!-- BoxIcons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- UnIcons -->
